Overflow issues solved both in responsiveness and normal

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-body{
-    overflow-x: hidden;
-}
